made some progress can list all

--- a/EventTracker/src/main/resources/static/index.html
+++ b/EventTracker/src/main/resources/static/index.html
@@ -32,8 +32,27 @@
 	</form>
 	<br>
 	<form name= 'allMeals'>
-	
+		<button name = 'meals'> Meals</button>
 	</form>	
 		
+<div>
+  <table>
+    <thead>
+      <tr>
+        <th>Meal Name |</th>
+        <th>Foods |</th>
+        <th>Calories |</th>
+        <th>Cost</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        
+      </tr>
+    </tbody>
+  </table>
+</div>
+
 </body>
 </html>
