stub angular project

--- a/EventTracker/src/main/resources/static/index.html
+++ b/EventTracker/src/main/resources/static/index.html
@@ -24,11 +24,11 @@
 	<br>
 	Add Meal:
 	<form name="addMealForm">
-		<input type="text" name='Name' placeholder="(Breakfast)">
-		<input type="text" name='Foods' placeholder="(pancakes)">
-		<input type="number" name='Calories' placeholder="calories">
-		<input type="number" name='Cost' placeholder="cost">
-		<button name = 'create'> Submit</button>
+		<input type="text" name='name' placeholder="(Breakfast)">
+		<input type="text" name='foods' placeholder="(pancakes)">
+		<input type="number" name='calories' placeholder="calories">
+		<input type="number" name='cost' placeholder="cost">
+		<button name = 'create'> create</button>
 	</form>
 	<br>
 	<form name= 'allMeals'>
